# zk_volunteer_computing

./: .gitignore  ARKWORKS.md  Cargo.toml  EXAMPLES.md  README.md  flake.nix
examples/: simple_adder.rs
examples/factorization-example/: Cargo.toml
examples/factorization-example/src/: challenge.rs  circuit.rs  client.rs  main.rs  server.rs
examples/factorization/src/: client.rs  main.rs  server.rs
examples/matrix-multiplication/: Cargo.toml
examples/matrix-multiplication-example/: Cargo.toml
examples/matrix-multiplication-example/src/: challenge.rs  circuit.rs  client.rs  main.rs  server.rs
examples/matrix-multiplication/src/: circuit.rs  client.rs  main.rs  server.rs
examples/simple-adder/: Cargo.toml
examples/simple-adder/src/: circuit.rs  main.rs
src/: circuit.rs  client.rs  server.rs  setup.rs
zkvc/: Cargo.toml
zkvc/src/: circuit.rs  client.rs  lib.rs  response.rs  server.rs  setup.rs  utils.rs
