[package]
name = "zkvc"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-relations = "0.3"
ark-std = "0.3"
ark-groth16 = "0.3"
ark-bls12-381 = "0.3"
ark-serialize = { version = "0.3", features = ["derive"] }
ark-ff = "0.3"
ark-r1cs-std = { version = "0.3", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.44.2", features = ["full"] }
actix-web = "4.10.2"
ark-snark = "0.3"
anyhow = "1.0.98"
rand = "0.8.5"
ark-ec = "0.3.0"
log = "0.4.27"
