[package]
name = "matrix-multiplication-example"
version = "0.1.0"
edition = "2021"

[dependencies]
zkvc = { path = "../../zkvc" }
ark-bls12-381 = "0.3"
ark-r1cs-std = { version = "0.3", features = ["std"] }
ark-relations = "0.3"
ark-ff = "0.3"
tokio = { version = "1.44.2", features = ["full"] }
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
anyhow = "1.0.98"
env_logger = "0.11.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.105"
num-primes = "0.3.0"
rand = "0.8.5"
actix-web = "4.3.1"
reqwest = { version = "0.11", features = ["json"] }
